# mwplu_analysis

./: .gitignore  Makefile  README.md  bulk_runner.py  environment.yml  main.py  pipe.py  pyproject.toml  python.sh  requirements.txt
config/: bulk_processing_examples.yaml  generate_plu_configs.py  pipeline_config.json  plu_tree.yaml  prompts.json  response_schema_pages.json  response_schema_plu.json
config/plu/: plu_external.yaml  plu_interim.yaml  plu_processed.yaml  plu_raw.yaml  references.json
config/prompt/: prompt.json  response_schema_synthesis.json
data/processed/: plui-grenoble.md  plui_analysis.json  response.json  response_1.json  response_text.json
data/raw/: Dispositions_Generales.json
data/raw/html/: Dispositions_Generales.html
dump/: .gitignore  main.py  pyproject.toml
dump/config/: prompts.json  response_schema_pages.json
dump/src/api/: mistral_ocr.py
dump/src/prompts/: prompt_config.py  txt_to_json.py
dump/src/static/: prompt_format.py
dump/supabase/: load_data.py
notebooks/: 00.00-Brouillon.ipynb  00.01-Database.ipynb  01-Extraction.ipynb  01.02-ModelsAPI.ipynb  01.03-RawPdfFilter.ipynb  01.10-Grenoble.ipynb  01.11-ExtractAgricole.ipynb  02-Analyse.ipynb  02.01-Analyse.ipynb  02.10-GrenoblePipeline.ipynb  gemini_response_formatted.json
notebooks/output/backup/: Zone_UC2.json  Zone_UC2.md
references/: Bulk Processing.md  MWPLU 101.md  TODO.md  preambule.txt  prompt.txt  prompt_plu.txt  prompt_reglement_zone.txt  system_prompt.txt  user_prompt.txt
references/api/: ocr_output.json  pages_output.json  standard_ocr_output.json  standard_pages_output.json  standard_synthesis_output.json  synthesis_output.json
references/api/gemini/: pages_output.json  (+3 more)
references/cities_command_process/: lille.md
references/dashboard/: dashboard.md
references/prompt/: prompt_extract_zones.txt  prompt_oap.txt  prompt_plu.txt  prompt_synthesis.txt  prompt_txt_to_json.py
src/: analyse.py  config.py  create_report.py  dataset.py  format.py  ocr.py  utils.py
src/api/: __init__.py  gemini_thinking.py  mistral_ocr.py  ocr_mistral.py  supabase.py  tables.sql  text_gemini.py
src/dump/: analyse.py  ocr.py
src/extract/: clean_image.py  clean_text.py  mistral_ocr.py  utils.py
src/gemini/: gemini_flash.py
src/mwplu/: __init__.py  bulk_processor.py  extract_pages.py  ocr.py  post_data.py  synthesis.py
src/prompt/: prompt_config.py  txt_to_json.py
src/static/: create_report.py  pdf.py  preprocess.py  prompt_format.py
src/utils/: __init__.py  image.py  json.py  logger.py  path_bucket.py  plu.py  prompt_txt_to_json.py
supabase/: tables.sql
test/: logger.py  supabase_data.py
test/bordeaux/: zone_to_zoning.py
test/lille/: zones_specifiques.py
(+159 files in other folders)
